# aerofoilSimulation

./: README.md  aerofoilData.xlsx  bernoulliCalculator.py
clRegression/: aerofoilData.csv  coefLiftML.py  pyproject.toml
learning_AI/: aiLearningMatplotlib.py  aiLearningNumpy.py  aiLearningPandas.py  linearRegression.py  username.csv
learning_AI/regressionPoetry/: advertising.csv  linearRegression.py  pyproject.toml
