[tool.poetry]
name = "clregression"
version = "0.1.0"
description = ""
authors = ["zcabeto <zcabeto@ucl.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.4"
pandas = "^1.5.1"
matplotlib = "^3.6.2"
scikit-learn = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
